--- a/Template/appsettings.json
+++ b/Template/appsettings.json
@@ -1,10 +1,13 @@
 {
+  "ConnectionStrings": {
+    "TemplateDB": "Server=GMEPN004733\\SQLEXPRESS; Database=Template; Trusted_Connection=True;"
+  },
   "Logging": {
-      "LogLevel": {
+    "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
-      }
-    },
-"AllowedHosts": "*"
+    }
+  },
+  "AllowedHosts": "*"
 }
